# vali-prediction-market-research

./: .gitattributes  .gitignore  AGENTS.md  ARTIFACT_INVENTORY.md  BASELINE_INVENTORY.md  ENVIRONMENT.md  FINAL_VALIDATION_REPORT.md  MIGRATION_LOG.md  README.md  REPOSITORY_POLICY.md  REPO_INTEGRITY_STATUS.md  V0_1_RELEASE_CANDIDATE.md  pyproject.toml
.codex/: PROJECT.md  project.json
.codex/playbooks/: data-artifacts.md  docs-change.md  kg-handoff.md  python-change.md  release-check.md
.codex/tasks/: README.md
configs/experiments/: fed_easing_v1.toml
configs/knowledge_graph/: edge_types.v1.json  node_types.v1.json  politicalstat_template.v1.json  review_record_schema.v1.json  status_values.v1.json
docs/: data-contracts.md  index.html  reporting-and-alpha-policy.md  research-protocol.md
docs/adr/: 0001-vali-1.0-is-authoritative.md  0002-public-data-and-forbidden-inputs.md  (+4 more)
examples/: config.toml
notebooks/: fed_rate_pilot.ipynb
scripts/: build_submission_library.py  run_google_trends_collection.ps1  run_kalshi_snapshot_window.ps1
tests/: test_application_cli_compatibility.py  test_data_boundary_compatibility.py  test_decisions.py  test_event_identity_contract.py  test_execution_boundary_compatibility.py  test_execution_contract.py  test_feature_composition_freeze.py  test_google_trends.py  test_google_trends_provider_decomposition.py  test_kalshi.py  test_kalshi_provider_decomposition.py  test_market.py  test_methodology_characterization.py  test_pipeline.py  test_public_input_boundary.py  test_regimes.py  test_signals.py  test_validation.py
(+175 files in other folders)
